tests/errors/2_syntax_errors/invalid-associativity.java
class Main {
    static void run() {
        int b = 1 < 2 < 3;
    }
}
